Fix scroll bar issues on small view of view quote screen (#104)

--- a/ui/app/pages/swaps/view-quote/index.scss
+++ b/ui/app/pages/swaps/view-quote/index.scss
@@ -4,18 +4,18 @@
   align-items: center;
   flex: 1;
   width: 100%;
-  padding-left: 20px;
-  padding-right: 20px;
 
   &__content {
     display: flex;
     flex-flow: column;
     align-items: center;
-    width: 311px;
+    width: 100%;
     height: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
 
     @media screen and (max-width: 576px) {
-      overflow-y: scroll;
+      overflow-y: auto;
       max-height: 388px;
     }
   }
